--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <div class="social">
             <div class="social-block animate4">
               <h4 class="social__title">Почта</h4>
-              <a href="mailto:buryattvoydrug@gmail.com" class="social__link">trust@trust.com</a>
+              <a href="mailto:dinamak5@mail.com" class="social__link">dinamak5@mail.ru</a>
             </div>
             <div class="social-block animate5">
               <h4 class="social__title">Тел</h4>
@@ -353,7 +353,7 @@
         <a href="tel:+79991115689" class="phone"><span class="desk__phone">+7 (999) 111 56 89</span></a>
       </div>
       <div class="footer-bottom">
-        <span class="copyright">@buryattvoydrug 2022</span>
+        <span class="copyright">@TRUST 2022</span>
         <span class="diskl">Сайт носит характер портфолио. Вся информация на нем не соответствует
           дейсвительности.</span>
       </div>
@@ -364,4 +364,3 @@
 
 </html>
 
-user
