--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <div class="social">
             <div class="social-block animate4">
               <h4 class="social__title">Почта</h4>
-              <a href="mailto:dinamak5@mail.com" class="social__link">dinamak5@mail.ru</a>
+              <a href="mailto:dinamak5@mail.ru" class="social__link">dinamak5@mail.ru</a>
             </div>
             <div class="social-block animate5">
               <h4 class="social__title">Тел</h4>
